name:                amanda
version:             0.1.0.0
synopsis:            micro blog engine
description:         micro blog engine
homepage:            http://github.com/aelve/amanda
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable amanda
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010